# MPAS-Model

./: Makefile
src/: CMakeLists.txt  build_core.cmake
src/core_landice/: landice.cmake
src/core_ocean/: Makefile  Registry.xml  get_cvmix2.0.sh  ocean.cmake
src/core_ocean/adc_mixing/: Registry_adc_mixing_fields_opts.xml  mpas_ocn_turbulence.F
src/core_ocean/analysis_members/: Makefile  Registry_analysis_members.xml  Registry_hurricane_statistics.xml  Registry_mixed_layer_heat_budget.xml  mpas_ocn_analysis_driver.F  mpas_ocn_hurricane_statistics.F  mpas_ocn_mixed_layer_heat_budget.F
src/core_ocean/cvmix_kokkos/: Makefile  cvmix2_compute_mixing.cpp  cvmix_kokkos_defs.hpp
src/core_ocean/driver/: mpas_ocn_core_interface.F
src/core_ocean/mode_forward/: mpas_ocn_forward_mode.F  mpas_ocn_time_integration.F  mpas_ocn_time_integration_rk4.F  mpas_ocn_time_integration_si.F  mpas_ocn_time_integration_split.F
src/core_ocean/mode_init/: Makefile  Registry.xml  Registry_baroclinic_channel.xml  Registry_deep_convection.xml  Registry_horizontal_advection.xml  Registry_vertical_advection.xml  mpas_ocn_init_baroclinic_channel.F  mpas_ocn_init_deep_convection.F  mpas_ocn_init_horizontal_advection.F  mpas_ocn_init_mode.F  mpas_ocn_init_vertical_advection.F
src/core_ocean/palm_les/: boundary_conds.f90  buoyancy.f90  check_parameters.f90  diffusion_s.f90  disturb_field.f90  eqn_state_seawater.f90  flow_statistics.f90  init_3d_model.f90  init_ocean.f90  make_vertical_grid.f90  modules.f90  palm_mod.f90  pres.f90  prognostic_equations.f90  time_integration.f90  timestep.f90  turbulence_closure_mod.f90
src/core_ocean/shared/: Makefile  mpas_ocn_adcReconstruct.F  mpas_ocn_adc_mixing.F  mpas_ocn_diagnostics.F  mpas_ocn_diagnostics_variables.F  mpas_ocn_gm.F  mpas_ocn_mesh.F  mpas_ocn_nonhydrostatic_pressure_solve.F  mpas_ocn_tendency.F  mpas_ocn_tracer_hmix.F  mpas_ocn_tracer_hmix_redi.F  mpas_ocn_turbulence.F  mpas_ocn_vel_hadv_coriolis.F  mpas_ocn_vel_pressure_grad.F  mpas_ocn_vmix.F  mpas_ocn_vmix_adc.F  mpas_ocn_vmix_coefs_redi.F  mpas_ocn_vmix_cvmix.F  mpas_ocn_vmix_cvmix2_kokkos.F  mpas_ocn_vmix_palm.F  mpas_ocn_vvel_advection.F  mpas_ocn_vvel_coriolis.F  mpas_ocn_vvel_hmix_del2.F  mpas_ocn_vvel_horiz_advection.F  mpas_ocn_vvel_horiz_advection_old.F  mpas_ocn_vvel_pgrad.F
src/core_seaice/: seaice.cmake
testing_and_setup/compass/: README  general.config.ocean  jamil_re_suite.py  manage_regression_suite.py  parallel.py  streamQueue.py  temp.py
testing_and_setup/compass/ocean/ha_test/: .gitignore  config_data.py
testing_and_setup/compass/ocean/ha_test/10km/default/: config_forward.xml  config_init.xml  visualize.py
testing_and_setup/compass/ocean/ha_test/20km/default/: config_init.xml
testing_and_setup/compass/ocean/ha_test/25km/default/: config_forward.xml  (+2 more)
testing_and_setup/compass/ocean/ha_test/data_analysis/: RMSE.py  get_resolution_parameters.py
testing_and_setup/compass/ocean/ha_test/tmp/: ha_template.xml
testing_and_setup/compass/ocean/regression_suites/: ha_regtest.xml  horizontal_bar_advection.xml  horizontal_bar_resolution_test.xml  vertical_bar_resolution_test.xml
testing_and_setup/compass/ocean/vert_test/10km/: config_init.xml
testing_and_setup/compass/ocean/vert_test/20km/: config_init.xml
testing_and_setup/compass/ocean/vert_test/5km/: config_init.xml  visualize.py
testing_and_setup/compass/ocean/vert_test/data_analysis/: get_resolution_parameters.py  vert_res_RMSE.py
testing_and_setup/compass/ocean/vert_test/tmp/: ha_template.xml
(+36 files in other folders)
